complete check for multiple MTP/PTP devices

BUG: 336523